Changelog
=========

2.0b2 - unreleased
------------------


2.0b1 - 2010-01-24
------------------

- Removed the checking for hideChildren when a single item is present, this
  makes the styling consistent again. The menu is really a one-item menu, and we
  put it in the header as a shortcut that you can click directly. This fixes
  http://dev.plone.org/plone/ticket/9735
  [limi]

2.0a2 - 2009-12-27
------------------

- Adjust factory menu to use the new getIconExprObject method.
  [hannosch]

- Removed no longer required zope.site dependency.
  [hannosch]

- Hide the actions, display and workflow menus on the folder contents page.
  This closes http://dev.plone.org/plone/ticket/8908.
  [hannosch]

- Avoid a bogus getToolByName indirection via getSite().
  [hannosch]

- Noted missing zope.publisher dependency and prefer absolute imports.
  [hannosch]

- Mark selected display always with 'actionMenuSelected' class and
  stop using bullet points. References
  http://dev.plone.org/plone/ticket/9894
  [dukebody]

2.0a1 - 2009-11-14
------------------

- Specified package dependencies and assorted cleanups.
  [hannosch]

- Avoid a deprecation warning for calling the ``actions`` method from the
  context_state state view without passing in an action category.
  [hannosch]

- Updated action and icon handling in the actions menu to take advantage of
  the icon being stored on the action itself.
  [hannosch]

- Added support for the new add_view_expr property available on FTIs. This
  can be used to construct a URL for add views.
  [optilude]

1.1.7 - 2009-03-07
------------------

- Made a test independent of an internal sort order.
  [hannosch]

- Escape the title of the defaultpage in the DisplayMenu. This fixes a
  potential xss attack and http://dev.plone.org/plone/ticket/8377.
  [csenger]

- Added the prefix "folder-" to the CSS id of the folder part of the view
  contentmenu. This closes http://dev.plone.org/plone/ticket/8375.
  [realefab]


1.1.6 2008-10-07