@@ -4,6 +4,11 @@ Changelog
 2.0b2 - unreleased
 ------------------
 
+- Query the types tool instead of the action tools to find add actions
+  in FactoriesSubMenuItem. This fixes a discrepancy in action URLs.
+  http://dev.plone.org/plone/ticket/10207
+  [wichert]
+
 
 2.0b1 - 2010-01-24
 ------------------
